syntax = "proto3";

package proto;
import "model.proto";

option go_package = ".;pb";

message PassMessageToClientRequest {
  string MessageID = 1;
  string HandlerID  = 2;
  string HandlerAddress  = 3;
  Message Message = 4;
}

message PassMessageToClientResponse {
  bool error = 1;
  string data = 2;
}

service WSHandlerService {
  rpc PassMessageToClient(PassMessageToClientRequest) returns (PassMessageToClientResponse);
}
